[package]
name = "yahoo_finance"
version = "0.1.0"
edition = "2021"
description = "Uma biblioteca Rust para obter dados financeiros / a Rust for fetching financial data"
license = "MIT"
repository = "https://github.com/gui-g7/Rust-Yahoo-Finance"
authors = ["Gunki <gunki394@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
